crates/cribo/tests/snapshots/ruff_lint_results@forward_reference_pkg.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_pkg/main.py
---
RuffLintResults {
    f401: [],
    f404: [],
    other: [],
    total: 0,
}
