crates/cribo/tests/snapshots/ruff_lint_results@import_error_handling.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/import_error_handling/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [
        "Line 11: unused-import - `nonexistent_module` imported but unused; consider using `importlib.util.find_spec` to test for availability",
        "Line 17: unused-import - `another_nonexistent` imported but unused",
        "Line 22: unused-import - `fake_package.fake_module` imported but unused; consider using `importlib.util.find_spec` to test for availability",
        "Line 23: unused-import - `fake_package.submodule.something` imported but unused; consider using `importlib.util.find_spec` to test for availability",
        "Line 29: unused-import - `winreg` imported but unused; consider using `importlib.util.find_spec` to test for availability",
    ],
    total_violations: 5,
}
